Re-correcting justify-content and align-items

--- a/css/styles.css
+++ b/css/styles.css
@@ -121,7 +121,8 @@ span {
     padding: 1rem 3rem;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
+    justify-content: center;
     text-align: left;
   }
 
